--- a/blog/src/main/resources/application-dev.yml
+++ b/blog/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/myblog?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/myblog2?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
     username: root
     password: HY1998@
 
@@ -10,6 +10,11 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true #输出sql语句
+  devtools:
+    restart:
+      enabled: true
+      additional-paths: src/main/java
+      additional-exclude: WEB-INF/**
 logging:
   level:
     root: info
@@ -17,6 +22,7 @@ logging:
   file:
     path:
     name: log/myblog-dev.log
+
 
 #mybatis:
 #  type-aliases-package: com.star.entity
