--- a/fastdemo/pom.xml
+++ b/fastdemo/pom.xml
@@ -87,6 +87,7 @@
             <artifactId>swagger-bootstrap-ui</artifactId>
             <version>1.9.6</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -98,6 +99,16 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!--json轉換工具-->
+        <!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.3</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
